Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum placeat ipsam natus est autem saepe, recusandae, hic quaerat dignissimos error architecto velit modi dolorum ipsum sequi, consequuntur voluptatem blanditiis possimus?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum placeat ipsam natus est autem saepe, recusandae, hic quaerat dignissimos error architecto velit modi dolorum ipsum sequi, consequuntur voluptatem blanditiis possimus?
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores magni, exercitationem dolor sequi consectetur sed, accusantium quis dicta itaque labore magnam modi voluptatem nesciunt cum iusto sapiente. Suscipit, qui magni. 
+    </p>
 </body>
 </html>
